added JLua, a LuaScript object and added skyboxes